--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm start --prefix client",
     "server": "node index.js",
-    "dev": "concurrently \"npm run server\" \"npm start\""
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "HUGB",
   "license": "ISC",
