--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "description": "e-commerce",
+  "engines": {
+    "node":"16.13.1",
+    "npm": "8.1.2"
+  },
   "main": "index.js",
   "scripts": {
     "start": "npm start",
